--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <link href="css/css.css" type="css">
+    <link rel="stylesheet" href="css/css.css">
     <body>
         <h1>test</h1>
     </body>
